# geoprover

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN_DECISIONS.md  GEOPROVER_PLAN.md  LICENSE  README.md  pyproject.toml
docs/: summarizer_architecture.md
examples/: analyze_gaps.rs  find_easy.rs  quick_gaps.rs  trace_unsound.rs
python/: animate.py  cache_proofs.py  evaluate.py  model.py  orchestrate.py  summarizer.py  test_bridge.py  test_nn.py  train.py  visualize.py
scripts/: debug_eq_tri.rs  diag_closest.rs  diag_deduction.rs  diag_near_miss.rs  diag_simple.rs  find_easy.rs  quick_gaps.rs  test-extended.sh  test-fast.sh  test-watchdog.sh
src/: construction.rs  deduction.rs  encoding.rs  lib.rs  parser.rs  proof_state.rs  proof_trace.rs  synthetic.rs
src/mcts/: mod.rs  node.rs  search.rs
tests/: test_integration.rs
web/: index.html
