[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "geoprover"
version = "0.1.0"
description = "Neurosymbolic geometry theorem prover using MCTS and a transformer neural network"
authors = [{name = "Adam A. Holmes", email = "adamaholmes@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
]

[tool.maturin]
features = ["pyo3/extension-module"]
